# adapter-rust

./: Cargo.toml  shell.nix
frames/: Cargo.toml
frames/src/: clip.rs  count.rs  from_video.rs  lib.rs  per_second.rs  to_video.rs
gpu/: Cargo.toml
gpu/examples/: clear_color.rs
gpu/src/: lib.rs  pipeline.rs  shader.wgsl  uniform.rs  vertex.rs
pixels/: Cargo.toml
pixels/src/: dimensions.rs  lib.rs  read.rs  write.rs
speaker/: Cargo.toml
speaker/examples/: melody1.rs
speaker/src/: lib.rs
tui/: Cargo.toml
tui/src/: lib.rs
window/: Cargo.toml
window/src/: api.rs  lib.rs  run.rs
