[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.17.0"
winit = "0.28.6"
pollster = "0.3.0"
window = { path = "../window" }
bytemuck = { version = "1.14.0", features = [ "derive" ] }
