[package]
name = "speaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.1"
wave = { git = "https://github.com/or-n/rust-minimalist-utils" }
array = { git = "https://github.com/or-n/rust-minimalist-utils" }
num = { git = "https://github.com/or-n/rust-minimalist-utils" }

[[example]]
name = "melody1"
path = "examples/melody1.rs"
